[UPDATE] remove unused class

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ https://heroicons.com/
 
 <body>
     <main>
-        <nav class="nav">
+        <nav>
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
                     stroke="currentColor" class="w-2 h-2">
